# controllers/chips.js
@@ -2,7 +2,7 @@ const db = require('../database/mongodb');
 const ObjectId = require('mongodb').ObjectId;
 
 const getData = async (req, res, next) => {
-  const result = await db.getDb().db().collection('chips').find();
+  const result = await db.getDb().db().collection('potato_chips').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists); 
@@ -11,12 +11,12 @@ const getData = async (req, res, next) => {
 const getDataById =  async (req, res, next) => {
   try {
     const id =  new ObjectId(req.params.id);
-    const result = await db.getDb().db().collection('chips').findOne({ _id: id });
+    const result = await db.getDb().db().collection('potato_chips').findOne({ _id: id });
     res.setHeader('Content-Type', 'application/json');
     if (result) {
       res.status(200).json(result);
     } else {
-      res.status(404).json({ message: 'Professional not found' });
+      res.status(404).json({ message: 'Potato Chip not found' });
     }
   }
   catch (error) {
@@ -27,20 +27,20 @@ const getDataById =  async (req, res, next) => {
 const createData = async (req, res, next) => {
   try {
     const data = {
-      brand: req.body.brand,
-      flavor: req.body.flavor,
-      type: req.body.type,
-      production_cost: req.body.cost,
-      retail_price: req.body.price,
-      nutritional_value: req.body.nutritional_value,
-      ingredients: req.body.ingredients,
-      image: req.body.image 
+      "brand": req.body.brand,
+      "flavor": req.body.flavor,
+      "type": req.body.type,
+      "production_cost": req.body.cost,
+      "retail_price": req.body.price,
+      "nutritional_value": req.body.nutritional_value,
+      "ingredients": req.body.ingredients,
+      "image": req.body.image 
     }
-    const result = await db.getDb().db().collection('chips').insertOne(data);
+    const result = await db.getDb().db().collection('potato_chips').insertOne(data);
     if(result.acknowledged){
-      res.status(200).json({ message: 'Professional inserted successfully' });
+      res.status(200).json({ message: 'Potato Chip inserted successfully' });
     } else {
-      res.status(404).json({ message: 'Professional not inserted' });
+      res.status(404).json({ message: 'Potato Chip not inserted' });
     }
   }
   catch (error) {
@@ -61,14 +61,14 @@ const updateData = async (req, res, next) => {
       "ingredients": req.body.ingredients,
       "image": req.body.image 
     }
-    const result = await db.getDb().db().collection('chips').replaceOne(
+    const result = await db.getDb().db().collection('potato_chips').replaceOne(
       { _id: id },
       data
     );
     if(result.modifiedCount > 0){
-      res.status(200).json({ message: 'Professional updated successfully' });
+      res.status(200).json({ message: 'Potato Chip updated successfully' });
     } else {
-      res.status(404).json({ message: 'Professional not found' });
+      res.status(404).json({ message: 'Potato Chip not found' });
     }
   }
   catch (error) {
@@ -80,11 +80,11 @@ const updateData = async (req, res, next) => {
 const deleteData = async (req, res, next) => {
   try {
     const id = new ObjectId(req.params.id);
-    const result = await db.getDb().db().collection('chips').deleteOne({ _id: id });
+    const result = await db.getDb().db().collection('potato_chips').deleteOne({ _id: id });
   if(result.deletedCount > 0){
-      res.status(200).json({ message: 'Professional deleted successfully' });
+      res.status(200).json({ message: 'Potato Chip deleted successfully' });
     } else {
-      res.status(404).json({ message: 'Professional not found' });
+      res.status(404).json({ message: 'Potato Chip not found' });
     }
   }
   catch(error){
