# middleware/chips-validator.js
@@ -2,14 +2,13 @@ const validator = require('../helpers/validate');
 
 const saveData = (req, res, next) => {
     const validationRule = {
-      firstName: 'required|string',
       brand: 'required|string',
       flavor: 'required|string',
       type: 'required|string',
-      production_cost: 'required|number',
-      retail_price: 'required|number',
-      nutritional_value: 'required|json',
-      ingredients: 'required|array',
+      production_cost: 'required|string',
+      retail_price: 'required|string',
+      nutritional_value: 'required|string',
+      ingredients: 'required|string',
       image: 'required|string'
     };
     validator(req.body, validationRule, {}, (err, status) => {
