# routes/professional.js
@@ -8,7 +8,7 @@ const router = express.Router();
 
 router.get('/', utils.handleErrors(professionalController.getData));
 router.get('/:id', utils.handleErrors(professionalController.getDataById));
-router.post('/', validator.saveData, utils.handleErrors(professionalController.createData));
+router.post('/', validator.saveData, professionalController.createData);
 router.put('/:id', validator.saveData, utils.handleErrors(professionalController.updateData));
 router.delete('/:id',  utils.handleErrors(professionalController.deleteData));
 
